<resources>
    <string name="app_name">Lionel Operational</string>
    <string name="app_version">Version 1.0.2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">Lionel Express</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="menu_acceptance">Acceptance</string>
    <string name="menu_create_console">Create Console</string>
    <string name="menu_create_way_bill">Create Waybill</string>
    <string name="menu_create_stob">Create STOB</string>
    <string name="gross_weight">Gross Weight</string>
    <string name="SttNumber">STT Number</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="console_number">Console Number</string>
    <string name="destination">Destination</string>
    <string name="select_destination">Select Destination</string>
    <string name="next">Next</string>
    <string name="error_message">Get data error %s</string>
    <string name="error_destination">Please select destination</string>
    <string name="error_console_code">Please input / scan Console Code</string>
    <string name="email_required">Email required</string>
    <string name="password_required">Password required</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="please_fill_STT">Please insert STT number</string>
    <string name="gw_required">Gross Weight Required</string>
    <string name="length_required">Length Required</string>
    <string name="width_required">Width Required</string>
    <string name="height_required">Height Required</string>
    <string name="add">ADD</string>
    <string name="error_shipment_exist">Shipment already exist</string>
    <string name="error_shipment_empty">Please fill in at least one shipment</string>
    <string name="way_bill_no">Waybill Number</string>
    <string name="shipping_method">Shipping Method</string>
    <string name="select_shipping_method">Select Shipping Method</string>
    <string name="shipping_agent">Shipping Agent</string>
    <string name="select_shipping_agent">Select Shipping Agent</string>
    <string name="origin">Origin</string>
    <string name="select_origin">Select Origin</string>
    <string name="liner">Liner</string>
    <string name="select_liner">Select Liner</string>
    <string name="waybill_no_required">Waybill number is required</string>
    <string name="shipping_method_required">Shipping method is required</string>
    <string name="shipping_agent_required">Shipping agent is required</string>
    <string name="rigin_required">Origin is required</string>
    <string name="liner_required">Liner is required</string>
    <string name="weight_must_greater_than_or_equal">weight must greater than or equal</string>
    <string name="data_not_found">data not found or shipment already processed</string>
    <string name="volume">Volume</string>
    <string name="shipping_factor">Shipping Factor</string>
    <string name="please_fill_STT_or_consol_no">Please fill STT or Console number</string>
    <string name="SttOrConsoleNumber">STT / Console Number</string>
    <string name="select_service">Select Service</string>
    <string name="service">Service</string>
    <string name="service_required">Service type is required</string>
    <string name="seal_no">Seal No</string>
    <string name="car_license_no">Car License Number</string>
    <string name="car_license_required">car license is required</string>
    <string name="seal_no_required">seal no is required</string>
    <string name="branch_id">Branch ID</string>
    <string name="ttl_pieces">TTL Piece</string>
    <string name="ttl_chargeable_weight">TTL Chargeable Weight</string>
    <string name="check_all">Check All</string>
    <string name="search">Search</string>
    <string name="total_gross_weight">Total Gross Weight</string>
    <string name="total_coli_gross_weight">Total Coli / Total Weight</string>
    <string name="already_exist">already exist</string>
    <string name="shipment">Shipment</string>
    <string name="destination_required">Destination is required</string>
    <string name="welcome">Welcome</string>
    <string name="wrong_format">Wrong format</string>
    <string name="checklistEcoOption">Centang untuk STOB dengan format ECO (Darat / Laut / Udara (ECO) )</string>
</resources>
